Fix vercel.json: removed unsupported environment block

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
     "buildCommand": "hugo --minify",
     "outputDirectory": "public",
-    "environment": {
-      "HUGO_VERSION": "0.145.0"
-    }
+    "framework": null
   }
   
