Fix: Reading time added

--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,7 @@ enableRobotsTXT: true
 pagination:
   pagerSize: 10
 params:
+  ShowReadingTime: true
   defaultTheme: auto
   description: >
     Cybersecurity portfolio of Sneh Bavarva – OSCP-certified professional with hands-on experience in penetration testing, threat analysis, and DevSecOps. Seeking opportunities to contribute and grow in the cybersecurity industry.
